# sqr-ai-news

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  bandit-report.json  check_auth_headers.py  docker-compose.yml  pyproject.toml  quality_assessment_report.md  requirements.txt  run.py  setup.cfg
.cursor/rules/: project-guidelines.mdc  quality-metrics.mdc  technical-requirements.mdc  user-features.mdc
.github/: pull_request_template.md
.github/workflows/: ci.yml  lint.yml  performance.yml  quality.yml  security.yml  test.yml  ui-tests.yml
app/: __init__.py  main.py  streamlit_app.py
app/api/: auth.py  feed.py  routes.py
app/core/: __init__.py  ai.py  config.py  dependencies.py  security.py
app/db/: crud.py  database.py  models.py
app/schemas/: channel.py  news.py  user.py
frontend/: Dockerfile  requirements.txt  streamlit_app.py
frontend/.streamlit/: config.toml
migrations/: env.py
migrations/versions/: add_category_field.py
output_artifacts/: README.md  bandit-report-updated.json  bandit-report.json  performance_report.md  pytest.ini  quality_metrics_summary.md
output_artifacts/test_samples/: README.md  test_api_performance.py  test_crud.py  test_database_integration.py  test_feed.py  test_frontend.py  test_security_bandit.py
performance/: IMPROVEMENTS.md  latest_test_summary.md  run_performance_test.py  test_api_performance.py
performance/reports/: performance_report.html  performance_report_20250508_155310.html  performance_report_20250508_160640.html  performance_report_20250508_161408.html  performance_report_20250508_161547.html  performance_report_20250508_162136.html  performance_report_20250508_162317.html  performance_report_20250508_162443.html  performance_report_20250508_162638.html  performance_report_20250508_163331.html  simulated_performance_report_20250508_160836.json
scripts/: fix_linting.sh
tests/: IMPROVEMENTS.md  conftest.py
tests/api/: test_auth.py  test_bookmarks.py  test_feed.py  test_routes.py
tests/integration/: test_database_integration.py
tests/performance/: test_api_performance.py
tests/security/: test_security_bandit.py
tests/ui/: README.md  conftest.py  test_frontend.py
tests/unit/: test_ai.py  test_crud.py  test_crud_extended.py  test_schema_validation.py
