[project]
name = "sqr-ai-news"
version = "0.1.0"
description = "AI-Powered News Aggregator"
authors = [
    {name = "Serge Polin",email = "s.polin@innopolis.university"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
