[tool.poetry]
name = "sqr-ai-news"
version = "0.1.0"
description = "AI-Powered News Aggregator"
authors = ["Serge Polin <s.polin@innopolis.university>"]
readme = "README.md"

packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.115.0,<0.116.0"
uvicorn = ">=0.27.0,<0.28.0"
sqlalchemy = ">=2.0.28,<2.1.0"
pydantic = ">=2.6.3,<2.7.0"
pydantic-settings = ">=2.1.0,<2.2.0"
streamlit = ">=1.32.2,<1.33.0"
python-multipart = ">=0.0.6,<0.1.0"
httpx = ">=0.27.0,<0.28.0"
python-dotenv = ">=1.1.0,<2.0.0"
alembic = ">=1.13.1,<2.0.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5,<9.0.0"
selenium = ">=4.31.0,<5.0.0"
flake8 = ">=7.2.0,<8.0.0"
ruff = ">=0.11.5,<0.12.0"
pytest-cov = ">=6.1.1,<7.0.0"
bandit = ">=1.8.3,<2.0.0"
locust = ">=2.34.1,<3.0.0"
hypothesis = ">=6.131.0,<7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
